# codemelted.rs

./: .gitignore  Cargo.toml  GETTING_STARTED.md  LICENSE  README.md  build.cmd  build.ps1  build.sh  codemelted.rs  index.html
js/: browser.test.js  bun.test.ts  codemelted.js  coverage-browser.html  deno.test.ts  node.test.js  test_deno.ts  ui_prototype.html  worker.test.js
mdbook/: book.toml
mdbook/src/: 1.0_functional-decomposition.md  2.0_domain-use-cases.md  3.0_cli.md  3.0_codemelted-crate.md  3.0_crates_io.md  3.0_native-cli.md  3.0_npu.md  3.0_the-crate-and-cli.md  4.0_building-rust-apps.md  4.0_cli.md  4.0_codemelted-cli.md  4.0_making-pwas-with-wasm.md  4.0_npu.md  5.0_raspberry-pi.md  5.0_wasm-pwas.md  5.0_wasm.md  6.0_npu-mathematics.md  6.0_npu.md  6.0_raspberry-pi.md  7.0_npu-mathematics.md  7.0_npu.md  README.md  SUMMARY.md
models/: codemelted_async.mmd  codemelted_console.mmd  codemelted_logger.mmd
pwsh/Invoke-CodeMeltedCLI/: Invoke-CodeMeltedCLI.psd1  Invoke-CodeMeltedCLI.psm1  README.md
support/: gists.html  index.html  resumeweb.html  uml-modeler.html
terminal/Invoke-CodeMeltedCLI/: Invoke-CodeMeltedCLI.psm1
